--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zVbBgvB7YQJrQDa4fWL3gwRfHKwXg8gu3BSNN9EqTYg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
