--- a/public/nginx_app.conf
+++ b/public/nginx_app.conf
@@ -1,14 +1,4 @@
 location / {
-    # try to serve file directly, fallback to rewrite
-    try_files $uri @rewriteapp;
+    try_files $uri $uri/ /index.php?$query_string;
 }
 
-location @rewriteapp {
-    # rewrite all to app.php
-    rewrite ^(.*)$ /index.php/$1 last;
-}
-
-location ~ ^/(app|app_dev|config)\.php(/|$) {
-    try_files @heroku-fcgi @heroku-fcgi;
-    internal;
-}
